Testing with robot

--- a/y2023/ChargedUp/ChargedUpDash.html
+++ b/y2023/ChargedUp/ChargedUpDash.html
@@ -7,7 +7,7 @@
 
     <frc-camera
         source-provider="NetworkTables"
-        style="transform: translate(80px, 361px); --image-width:0px; --image-height:0px; --crosshair-width:2px; --crosshair-color:#ffffff; --image-display:block; width: 538px; height: 349px;"
+        style="transform: translate(80px, 361px); --image-width: 0px; --image-height: 0px; --crosshair-width: 2px; --crosshair-color: #ffffff; --image-display: block; width: 538px; height: 349px;"
         streams="[]"
     ></frc-camera>
     <frc-robot-command
@@ -15,54 +15,63 @@
         source-key="/Shuffleboard/AutomatedTurret/High Cone Left"
         style="transform: translate(11px, 17px); width: 226.922px; height: 115px;"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/AutomatedTurret/High Cube"
         style="transform: translate(235px, 18px); width: 217.359px; height: 111px;"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/AutomatedTurret/High Cone Right"
         style="transform: translate(453px, 24px); width: 236.875px; height: 108px;"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(8px, 128px); width: 232.812px; height: 123px;"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cone Left"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(233px, 127px); width: 226.25px; height: 122px;"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cube"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(452px, 132px); width: 246.781px; height: 118px;"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cone Right"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(7px, 249px); width: 230.453px; height: 106px;"
         source-key="/Shuffleboard/AutomatedTurret/Low Cone Left"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(233px, 248px); width: 222.891px; height: 112px;"
         source-key="/Shuffleboard/AutomatedTurret/Low Cube"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(451px, 248px); width: 247.422px; height: 107px;"
         source-key="/Shuffleboard/AutomatedTurret/Low Cone Right"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-sendable-chooser
         source-key="/SmartDashboard/Auto Mode Select"
@@ -90,30 +99,35 @@
         style="transform: translate(39px, 55px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis set position: (0, 0, 0)"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(43px, 134px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis set position: (0, 0, 90 deg)"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(49px, 201px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis set position: (0, 0, -90 deg)"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(46px, 267px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis: Tune Velocity"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis: Sync Odometry"
         style="transform: translate(49px, 332px);"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-field
         source-key="/SmartDashboard/Field"
@@ -130,7 +144,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/Robot"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(90.011deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(90deg);"
             pose="[0,0,0]"
             opacity="100"
         ></frc-field-robot>
@@ -166,7 +180,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/OldOdometry"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(184.194deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(89.7748deg);"
             opacity="100"
             pose="[0,0,0]"
         ></frc-field-robot>
@@ -216,7 +230,6 @@
         style="transform: translate(51px, 393px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis Auto Engage"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-line-chart
         title="Line Chart"
@@ -256,25 +269,27 @@
     tab-name="Arm Pivot"
     slot="tab"
     source-provider="NetworkTables"
-    selected=""
 >
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/ArmPivotTestCommands/Arm Pivot: Angle PID - 0 degrees"
         style="transform: translate(24px, 18px);"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/ArmPivotTestCommands/Arm Pivot: Angle PID - 45 degrees"
         style="transform: translate(22px, 67px);"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(23px, 132px);"
         source-key="/Shuffleboard/ArmPivotTestCommands/Arm Pivot: Angle PID - 90 degrees"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-line-chart
         title="Line Chart"
@@ -331,21 +346,18 @@
         style="transform: translate(23px, 257px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: Reset Encoder"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(22px, 308px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: Reset Encoder (0 deg)"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(25px, 360px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: to Coast Mode"
         name=""
-        label=""
     ></frc-robot-command>
 
 
@@ -355,6 +367,7 @@
         source-provider="NetworkTables"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: Reset Encoder (Abs Encoder Val)"
         style="transform: translate(26px, 419px);"
+        label=""
     ></frc-robot-command>
     <vaadin-number-field
         label="Arm Encoder"
@@ -364,23 +377,22 @@
         source-provider="NetworkTables"
         style="transform: translate(56px, 533px);"
         source-key="/Arm Subsystem/Arm Encoder (deg)"
-        placeholder=""
         min="NaN"
         max="NaN"
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-25"
+            id="vaadin-number-field-2"
             aria-labelledby="label-vaadin-number-field-25"
             aria-describedby=""
-            min="undefined"
-            max="undefined"
+            min="NaN"
+            max="NaN"
             step="any"
         ><label
             slot="label"
             id="label-vaadin-number-field-25"
-            for="vaadin-number-field-25"
+            for="vaadin-number-field-2"
         >Arm Encoder</label>
         <div
             slot="error-message"
@@ -400,7 +412,6 @@
         style="transform: translate(14px, 10px);"
         source-key="/SmartDashboard/Run checklist"
         name=""
-        label=""
     ></frc-robot-command>
 
     <frc-robot-command
@@ -408,12 +419,14 @@
         style="transform: translate(18px, 69px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: to Coast Mode"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(238px, 68px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: Reset Encoder (Abs Encoder Val)"
         name=""
+        label=""
     ></frc-robot-command>
 
     <vaadin-number-field
@@ -426,12 +439,11 @@
         source-key="/Arm Subsystem/Absolute Encoder Entry"
         min="NaN"
         max="NaN"
-        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-4"
+            id="vaadin-number-field-3"
             aria-labelledby="label-vaadin-number-field-111"
             aria-describedby=""
             min="NaN"
@@ -440,7 +452,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-111"
-            for="vaadin-number-field-4"
+            for="vaadin-number-field-3"
         >Absolute Encoder</label>
         <div
             slot="error-message"
@@ -458,12 +470,11 @@
         source-key="/Arm Subsystem/Arm Encoder (deg)"
         min="NaN"
         max="NaN"
-        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-5"
+            id="vaadin-number-field-4"
             aria-labelledby="label-vaadin-number-field-135"
             aria-describedby=""
             min="NaN"
@@ -472,7 +483,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-135"
-            for="vaadin-number-field-5"
+            for="vaadin-number-field-4"
         >Built In Encoder</label>
         <div
             slot="error-message"
@@ -491,63 +502,54 @@
         style="transform: translate(69px, 66px);"
         source-key="/Shuffleboard/AutomatedTurret/High Cone Left"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(312px, 83px);"
         source-key="/Shuffleboard/AutomatedTurret/High Cube"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(535px, 79px);"
         source-key="/Shuffleboard/AutomatedTurret/High Cone Right"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(70px, 214px);"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cone Left"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(323px, 224px);"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cube"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(549px, 214px);"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cone Right"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(68px, 326px);"
         source-key="/Shuffleboard/AutomatedTurret/Low Cone Left"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(293px, 318px);"
         source-key="/Shuffleboard/AutomatedTurret/Low Cube"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(550px, 330px);"
         source-key="/Shuffleboard/AutomatedTurret/Low Cone Right"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-field
         source-key="/Shuffleboard/Debug/Field"
@@ -564,7 +566,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/Robot"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(90.011deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(90deg);"
             opacity="100"
             pose="[0,0,0]"
         ></frc-field-robot>
@@ -606,12 +608,12 @@
 >
     <frc-camera
         source-provider="NetworkTables"
-        style="transform: translate(36px, 19px); --image-width:0px; --image-height:0px; --crosshair-width:2px; --crosshair-color:#ffffff; --image-display:block;"
+        style="transform: translate(36px, 19px); --image-width: 0px; --image-height: 0px; --crosshair-width: 2px; --crosshair-color: #ffffff; --image-display: block;"
         streams="[]"
     ></frc-camera>
     <frc-camera
         source-provider="NetworkTables"
-        style="transform: translate(416px, 20px); --image-width:0px; --image-height:0px; --crosshair-width:2px; --crosshair-color:#ffffff; --image-display:block;"
+        style="transform: translate(416px, 20px); --image-width: 0px; --image-height: 0px; --crosshair-width: 2px; --crosshair-color: #ffffff; --image-display: block;"
         streams="[]"
     ></frc-camera>
 
@@ -630,7 +632,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/Robot"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(90.011deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(90deg);"
             opacity="100"
             pose="[0,0,0]"
         ></frc-field-robot>
@@ -653,7 +655,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/OldOdometry"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(184.194deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(89.7748deg);"
             opacity="100"
             pose="[0,0,0]"
         ></frc-field-robot>
@@ -713,49 +715,42 @@
         style="transform: translate(62px, 70px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Full Retract"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(61px, 144px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Mid Retract"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(78px, 211px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Full Extend"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(328px, 64px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Bottom Extended"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(334px, 136px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Bottom Retracted"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(335px, 208px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Top Extended"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Top Retracted"
         style="transform: translate(357px, 287px);"
         name=""
-        label=""
     ></frc-robot-command>
 </dashboard-tab>
 <dashboard-tab
@@ -768,14 +763,12 @@
         source-key="/Shuffleboard/ClawTestCommands/Claw: In"
         style="transform: translate(129px, 162px);"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(133px, 255px);"
         source-key="/Shuffleboard/ClawTestCommands/Claw: Out"
         name=""
-        label=""
     ></frc-robot-command>
 </dashboard-tab>
 <dashboard-tab
@@ -830,4 +823,48 @@
             label="Angle"
         ></frc-chart-data>
     </frc-line-chart>
+</dashboard-tab>
+<dashboard-tab
+    tab-name="Tab 10"
+    slot="tab"
+    source-provider="NetworkTables"
+    selected=""
+>
+    <frc-robot-command
+        source-provider="NetworkTables"
+        source-key="/Shuffleboard/ChassisTestCommands/180deg Swerve Module 0"
+        style="transform: translate(115.2px, 45.6px);"
+        label=""
+    ></frc-robot-command>
+    <frc-robot-command
+        source-provider="NetworkTables"
+        source-key="/Shuffleboard/ChassisTestCommands/45deg Swerve Module 0"
+        label=""
+    ></frc-robot-command>
+    <frc-line-chart
+        title="Line Chart"
+        source-provider="NetworkTables"
+        style="transform: translate(142.4px, 162.4px);"
+    >
+        <frc-chart-axis
+            source-provider="NetworkTables"
+            tick-values="[]"
+        ></frc-chart-axis>
+        <frc-chart-data
+            label="Data"
+            color="#00aa00"
+            source-provider="NetworkTables"
+            source-key="/SmartDashboard/FL Abs Encoder Pos"
+        ></frc-chart-data>
+        <frc-chart-data
+            source-provider="NetworkTables"
+            source-key="/SmartDashboard/FL Goal Angle: "
+        ></frc-chart-data>
+    </frc-line-chart>
+    <frc-robot-command
+        source-provider="NetworkTables"
+        source-key="/Shuffleboard/ChassisTestCommands/3ms Swerve Module0"
+        style="transform: translate(410px, 77px);"
+        label=""
+    ></frc-robot-command>
 </dashboard-tab>
