--- a/y2023/ChargedUp/ChargedUpDash.html
+++ b/y2023/ChargedUp/ChargedUpDash.html
@@ -15,63 +15,54 @@
         source-key="/Shuffleboard/AutomatedTurret/High Cone Left"
         style="transform: translate(11px, 17px); width: 226.922px; height: 115px;"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/AutomatedTurret/High Cube"
         style="transform: translate(235px, 18px); width: 217.359px; height: 111px;"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/AutomatedTurret/High Cone Right"
         style="transform: translate(453px, 24px); width: 236.875px; height: 108px;"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(8px, 128px); width: 232.812px; height: 123px;"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cone Left"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(233px, 127px); width: 226.25px; height: 122px;"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cube"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(452px, 132px); width: 246.781px; height: 118px;"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cone Right"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(7px, 249px); width: 230.453px; height: 106px;"
         source-key="/Shuffleboard/AutomatedTurret/Low Cone Left"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(233px, 248px); width: 222.891px; height: 112px;"
         source-key="/Shuffleboard/AutomatedTurret/Low Cube"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(451px, 248px); width: 247.422px; height: 107px;"
         source-key="/Shuffleboard/AutomatedTurret/Low Cone Right"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-sendable-chooser
         source-key="/SmartDashboard/Auto Mode Select"
@@ -99,35 +90,30 @@
         style="transform: translate(39px, 55px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis set position: (0, 0, 0)"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(43px, 134px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis set position: (0, 0, 90 deg)"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(49px, 201px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis set position: (0, 0, -90 deg)"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(46px, 267px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis: Tune Velocity"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis: Sync Odometry"
         style="transform: translate(49px, 332px);"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-field
         source-key="/SmartDashboard/Field"
@@ -144,7 +130,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/Robot"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(90deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(77.5635deg);"
             pose="[0,0,0]"
             opacity="100"
         ></frc-field-robot>
@@ -180,7 +166,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/OldOdometry"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(89.7748deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(77.5635deg);"
             opacity="100"
             pose="[0,0,0]"
         ></frc-field-robot>
@@ -230,6 +216,7 @@
         style="transform: translate(51px, 393px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis Auto Engage"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-line-chart
         title="Line Chart"
@@ -275,21 +262,18 @@
         source-key="/Shuffleboard/ArmPivotTestCommands/Arm Pivot: Angle PID - 0 degrees"
         style="transform: translate(24px, 18px);"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/ArmPivotTestCommands/Arm Pivot: Angle PID - 45 degrees"
         style="transform: translate(22px, 67px);"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(23px, 132px);"
         source-key="/Shuffleboard/ArmPivotTestCommands/Arm Pivot: Angle PID - 90 degrees"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-line-chart
         title="Line Chart"
@@ -346,18 +330,21 @@
         style="transform: translate(23px, 257px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: Reset Encoder"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(22px, 308px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: Reset Encoder (0 deg)"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(25px, 360px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: to Coast Mode"
         name=""
+        label=""
     ></frc-robot-command>
 
 
@@ -367,7 +354,6 @@
         source-provider="NetworkTables"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: Reset Encoder (Abs Encoder Val)"
         style="transform: translate(26px, 419px);"
-        label=""
     ></frc-robot-command>
     <vaadin-number-field
         label="Arm Encoder"
@@ -379,6 +365,7 @@
         source-key="/Arm Subsystem/Arm Encoder (deg)"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -412,6 +399,7 @@
         style="transform: translate(14px, 10px);"
         source-key="/SmartDashboard/Run checklist"
         name=""
+        label=""
     ></frc-robot-command>
 
     <frc-robot-command
@@ -419,14 +407,12 @@
         style="transform: translate(18px, 69px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: to Coast Mode"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(238px, 68px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: Reset Encoder (Abs Encoder Val)"
         name=""
-        label=""
     ></frc-robot-command>
 
     <vaadin-number-field
@@ -439,6 +425,7 @@
         source-key="/Arm Subsystem/Absolute Encoder Entry"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -470,6 +457,7 @@
         source-key="/Arm Subsystem/Arm Encoder (deg)"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -502,54 +490,63 @@
         style="transform: translate(69px, 66px);"
         source-key="/Shuffleboard/AutomatedTurret/High Cone Left"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(312px, 83px);"
         source-key="/Shuffleboard/AutomatedTurret/High Cube"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(535px, 79px);"
         source-key="/Shuffleboard/AutomatedTurret/High Cone Right"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(70px, 214px);"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cone Left"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(323px, 224px);"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cube"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(549px, 214px);"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cone Right"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(68px, 326px);"
         source-key="/Shuffleboard/AutomatedTurret/Low Cone Left"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(293px, 318px);"
         source-key="/Shuffleboard/AutomatedTurret/Low Cube"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(550px, 330px);"
         source-key="/Shuffleboard/AutomatedTurret/Low Cone Right"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-field
         source-key="/Shuffleboard/Debug/Field"
@@ -566,7 +563,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/Robot"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(90deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(77.5635deg);"
             opacity="100"
             pose="[0,0,0]"
         ></frc-field-robot>
@@ -632,7 +629,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/Robot"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(90deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(77.5635deg);"
             opacity="100"
             pose="[0,0,0]"
         ></frc-field-robot>
@@ -655,7 +652,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/OldOdometry"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(89.7748deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(77.5635deg);"
             opacity="100"
             pose="[0,0,0]"
         ></frc-field-robot>
@@ -715,42 +712,49 @@
         style="transform: translate(62px, 70px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Full Retract"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(61px, 144px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Mid Retract"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(78px, 211px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Full Extend"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(328px, 64px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Bottom Extended"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(334px, 136px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Bottom Retracted"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(335px, 208px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Top Extended"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Top Retracted"
         style="transform: translate(357px, 287px);"
         name=""
+        label=""
     ></frc-robot-command>
 </dashboard-tab>
 <dashboard-tab
@@ -763,12 +767,14 @@
         source-key="/Shuffleboard/ClawTestCommands/Claw: In"
         style="transform: translate(129px, 162px);"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(133px, 255px);"
         source-key="/Shuffleboard/ClawTestCommands/Claw: Out"
         name=""
+        label=""
     ></frc-robot-command>
 </dashboard-tab>
 <dashboard-tab
@@ -825,46 +831,111 @@
     </frc-line-chart>
 </dashboard-tab>
 <dashboard-tab
-    tab-name="Tab 10"
+    tab-name="Swerve"
     slot="tab"
     source-provider="NetworkTables"
     selected=""
 >
     <frc-robot-command
         source-provider="NetworkTables"
-        source-key="/Shuffleboard/ChassisTestCommands/180deg Swerve Module 0"
-        style="transform: translate(115.2px, 45.6px);"
-        label=""
+        source-key="/Shuffleboard/ChassisTestCommands/Swerve Module[0]  180deg 0mps"
+        style="transform: translate(2.2px, 47.6px);"
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
-        source-key="/Shuffleboard/ChassisTestCommands/45deg Swerve Module 0"
-        label=""
+        source-key="/Shuffleboard/ChassisTestCommands/Swerve Module[0]   45deg 0mps"
     ></frc-robot-command>
     <frc-line-chart
-        title="Line Chart"
+        title="Module 0"
         source-provider="NetworkTables"
-        style="transform: translate(142.4px, 162.4px);"
+        style="transform: translate(198.391px, 137px); width: 729px; height: 593px;"
     >
         <frc-chart-axis
             source-provider="NetworkTables"
             tick-values="[]"
+            min="-200"
+            max="200"
+            axis-id="AngleAxis"
+        ></frc-chart-axis>
+        <frc-chart-axis
+            source-provider="NetworkTables"
+            axis-id="VelocityAxis"
+            min="-3"
+            max="3"
+            tick-values="[]"
+            position="right"
         ></frc-chart-axis>
         <frc-chart-data
-            label="Data"
+            label="Angle"
             color="#00aa00"
             source-provider="NetworkTables"
-            source-key="/SmartDashboard/FL Abs Encoder Pos"
+            source-key="/SwerveDrive/FL/Current Angle"
+            axis-id="AngleAxis"
         ></frc-chart-data>
         <frc-chart-data
             source-provider="NetworkTables"
-            source-key="/SmartDashboard/FL Goal Angle: "
+            source-key="/SwerveDrive/FL/Goal Angle"
+            axis-id="AngleAxis"
+            label="Goal Angle"
+        ></frc-chart-data>
+        <frc-chart-data
+            source-provider="NetworkTables"
+            source-key="/SwerveDrive/FL/Current Velocity"
+            axis-id="VelocityAxis"
+            label="Velocity"
+        ></frc-chart-data>
+        <frc-chart-data
+            source-provider="NetworkTables"
+            source-key="/SwerveDrive/FL/Goal Velocity"
+            axis-id="VelocityAxis"
+            label="Goal Velocity"
         ></frc-chart-data>
     </frc-line-chart>
+
     <frc-robot-command
         source-provider="NetworkTables"
-        source-key="/Shuffleboard/ChassisTestCommands/3ms Swerve Module0"
-        style="transform: translate(410px, 77px);"
+        style="transform: translate(9px, 99px);"
+        source-key="/Shuffleboard/ChassisTestCommands/Swerve Module[0] -180deg 0mps"
         label=""
     ></frc-robot-command>
+    <frc-robot-command
+        source-provider="NetworkTables"
+        source-key="/Shuffleboard/ChassisTestCommands/Swerve Module[0] 0deg -1mps"
+        style="transform: translate(11px, 154px);"
+    ></frc-robot-command>
+    <frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(18px, 198px);"
+        source-key="/Shuffleboard/ChassisTestCommands/Swerve Module[0] 0deg  1mps"
+    ></frc-robot-command>
+    <frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(16px, 244px);"
+        source-key="/Shuffleboard/ChassisTestCommands/Swerve Module[0] 0deg  2mps"
+    ></frc-robot-command>
+    <frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(222px, 6px);"
+        source-key="/Shuffleboard/ChassisTestCommands/Chassis Speed (1,0,0)"
+    ></frc-robot-command>
+    <frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(223px, 55px);"
+        source-key="/Shuffleboard/ChassisTestCommands/Chassis Speed (0,1,0)"
+    ></frc-robot-command>
+    <frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(225px, 93px);"
+        source-key="/Shuffleboard/ChassisTestCommands/Chassis Speed (0,0,1)"
+    ></frc-robot-command>
+    <frc-swerve-drivebase
+        source-provider="NetworkTables"
+        style="transform: translate(980px, 206px);"
+        source-key="/SwerveDrive"
+        wheellocations="[2.5,2,2.5,-2,-2.5,2,-2.5,-2]"
+        measuredstates="[0,0,0,0,0,0,0,0]"
+        desiredstates="[0,0,0,0,0,0,0,0]"
+        sizeleftright="4"
+        sizefrontback="5"
+    ></frc-swerve-drivebase>
 </dashboard-tab>
